--- a/README
+++ b/README
@@ -3,25 +3,23 @@ gstreamer0.10-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.7.0-44
+  cygwin-1.7.0-48
   alternatives
-  libglib2.0_0-2.20.0-1
-  libgstreamer0.10_0-0.10.22-10
+  libglib2.0_0-2.20.3-1
+  libgstreamer0.10_0-0.10.23-1
   libintl8-0.17-10
   liboil0.3_0-0.3.15-10
 
 (cdparanoia)
   libcdio_cdda0-0.81-10
   libcdio_paranoia0-0.81-10
-(gnome_vfs)
-  libgnomevfs2_0-2.26.0-1
 (libvisual)
   libvisual0.4_0-0.4.0-10
   libvisual0.4-plugins-0.4.0-10
 (ogg)
   libogg0-1.1.3-1
 (pango)
-  libpango1.0_0-1.24.0-1
+  libpango1.0_0-1.24.2-1
 (theora)
   libtheoradec1-1.0-10
   libtheoraenc1-1.0-10
@@ -41,9 +39,9 @@ Build requirements:
   gawk-3.1.6-2
   gcc4-core-4.3.2-2
   gtk-doc-1.11-2
-  libtool-2.2.6a-2
+  libtool-2.2.7a-12
   make-3.81-2
-  pkg-config-0.23a-2
+  pkg-config-0.23b-10
   python-2.5.4-10
   sed-4.1.5-2
 
@@ -56,52 +54,51 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer0.10-plugins-base-0.10.22-X-src.tar.bz2
+  unpack gstreamer0.10-plugins-base-0.10.23-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer0.10-plugins-base-0.10.22-X.cygport all
+  cygport ./gstreamer0.10-plugins-base-0.10.23-X.cygport all
 
 This will create:
-  /usr/src/gstreamer0.10-plugins-base-0.10.22-X-src.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-devel-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-cdparanoia-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-gio-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-gnome_vfs-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-libvisual-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ogg-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-pango-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-theora-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-vorbis-0.10.22-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ximage-0.10.22-X.tar.bz2
-  /usr/src/libgstapp0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstapp0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstaudio0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstaudio0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstcdda0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstcdda0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstfft0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstfft0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstfloatcast0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstinterfaces0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstinterfaces0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstnetbuffer0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstnetbuffer0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstpbutils0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstpbutils0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstriff0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstriff0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstrtp0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstrtp0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstrtsp0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstrtsp0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstsdp0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstsdp0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgsttag0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgsttag0.10_0-0.10.22-X.tar.bz2
-  /usr/src/libgstvideo0.10-devel-0.10.22-X.tar.bz2
-  /usr/src/libgstvideo0.10_0-0.10.22-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.23-X-src.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-devel-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-cdparanoia-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-gio-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-libvisual-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ogg-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-pango-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-theora-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-vorbis-0.10.23-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ximage-0.10.23-X.tar.bz2
+  /usr/src/libgstapp0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstapp0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstaudio0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstaudio0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstcdda0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstcdda0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstfft0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstfft0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstfloatcast0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstinterfaces0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstinterfaces0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstnetbuffer0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstnetbuffer0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstpbutils0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstpbutils0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstriff0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstriff0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstrtp0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstrtp0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstrtsp0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstrtsp0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstsdp0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstsdp0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgsttag0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgsttag0.10_0-0.10.23-X.tar.bz2
+  /usr/src/libgstvideo0.10-devel-0.10.23-X.tar.bz2
+  /usr/src/libgstvideo0.10_0-0.10.23-X.tar.bz2
 
 -------------------------------------------
 
@@ -274,10 +271,6 @@ Files included in the binary packages:
 (gstreamer0.10-plugins-gio)
   /usr/lib/gstreamer-0.10/cyggstgio.dll
   /usr/lib/gstreamer-0.10/libgstgio.la
-
-(gstreamer0.10-plugins-gnome_vfs)
-  /usr/lib/gstreamer-0.10/cyggstgnomevfs.dll
-  /usr/lib/gstreamer-0.10/libgstgnomevfs.la
 
 (gstreamer0.10-plugins-libvisual)
   /usr/lib/gstreamer-0.10/cyggstlibvisual.dll
@@ -539,6 +532,10 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.23-1 -----
+Version bump.
+Removed GNOME VFS plugin as obsoleted by GIO.
 
 ----- version 0.10.22-10 -----
 Initial release for Cygwin 1.7.
