--- a/README
+++ b/README
@@ -3,44 +3,40 @@ gstreamer0.10-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.7.0-62
+  cygwin-1.7.1-1
   alternatives
-  libgcc1-4.3.4-1
-  libglib2.0_0-2.22.2-1
-  libgstreamer0.10_0-0.10.25-1
+  libgcc1-4.3.4-3
+  libglib2.0_0-2.22.4-2
+  libgstreamer0.10_0-0.10.26-1
   libintl8-0.17-11
-  liboil0.3_0-0.3.16-1
-  libxml2-2.7.4-1
-
-(libvisual)
-  libvisual0.4_0-0.4.0-10
-  libvisual0.4-plugins-0.4.0-10
+  liboil0.3_0-0.3.17-1
+  libxml2-2.7.6-1
 (ogg)
-  libogg0-1.1.3-1
+  libogg0-1.1.4-1
 (pango)
   libcairo2-1.8.8-1
-  libpango1.0_0-1.26.0-1
+  libpango1.0_0-1.26.2-1
 (theora)
   libtheoradec1-1.1.1-1
   libtheoraenc1-1.1.1-1
 (vorbis)
-  libvorbis0-1.2.0-1
-  libvorbisenc2-1.2.0-1
+  libvorbis0-1.2.3-1
+  libvorbisenc2-1.2.3-1
 (ximage)
-  libX11_6-1.3.2-1
+  libX11_6-1.3.3-1
   libXext6-1.1.1-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-10
-  automake1.10-1.10.2-10
+  autoconf2.5-2.65-1
+  automake1.11-1.11.1-1
   binutils-2.19.51-1
-  cygport-0.9.10-1
+  cygport-0.9.80-1
   gawk-3.1.7-1
-  gcc4-core-4.3.4-1
-  gobject-introspection-0.6.5-2
-  gtk-doc-1.11-2
-  libtool-2.2.7a-14
+  gcc4-core-4.3.4-3
+  gobject-introspection-0.6.7-1
+  gtk-doc-1.13-1
+  libtool-2.2.7a-15
   make-3.81-2
   pkg-config-0.23b-10
   python-2.5.4-10
@@ -55,29 +51,31 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer0.10-plugins-base-0.10.25-X-src.tar.bz2
+  unpack gstreamer0.10-plugins-base-0.10.26-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer0.10-plugins-base-0.10.25-X.cygport all
+  cygport ./gstreamer0.10-plugins-base-0.10.26-X.cygport all
 
 This will create:
-  /usr/src/girepository-GstInterfaces0.10-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.25-X-src.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-gio-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-libvisual-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ogg-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-pango-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-theora-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-vorbis-0.10.25-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ximage-0.10.25-X.tar.bz2
-  /usr/src/libgstinterfaces0.10-devel-0.10.25-X.tar.bz2
-  /usr/src/libgstinterfaces0.10_0-0.10.25-X.tar.bz2
+  /usr/src/girepository-GstInterfaces0.10-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.26-X-src.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-gio-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ogg-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-pango-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-theora-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-vorbis-0.10.26-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ximage-0.10.26-X.tar.bz2
+  /usr/src/libgstinterfaces0.10-devel-0.10.26-X.tar.bz2
+  /usr/src/libgstinterfaces0.10_0-0.10.26-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 0.10.26-1 -----
+Version bump.
 
 ----- version 0.10.25-1 -----
 Version bump.
