--- a/README
+++ b/README
@@ -3,18 +3,18 @@ gstreamer0.10-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.7.1-1
+  cygwin-1.7.5-1
   alternatives
   libgcc1-4.3.4-3
   libglib2.0_0-2.22.4-2
-  libgstreamer0.10_0-0.10.28-1
+  libgstreamer0.10_0-0.10.29-1
   libintl8-0.17-11
   liboil0.3_0-0.3.17-1
-  libxml2-2.7.6-1
+  libxml2-2.7.7-1
 (ogg)
   libogg0-1.1.4-1
 (pango)
-  libcairo2-1.8.8-1
+  libcairo2-1.8.10-1
   libpango1.0_0-1.26.2-1
 (theora)
   libtheoradec1-1.1.1-1
@@ -31,16 +31,15 @@ Build requirements:
   autoconf2.5-2.65-1
   automake1.11-1.11.1-1
   binutils-2.19.51-1
-  cygport-0.9.80-1
+  cygport-0.9.83-1
   gawk-3.1.7-1
   gcc4-core-4.3.4-3
-  gobject-introspection-0.6.7-1
-  gtk-doc-1.13-1
+  gobject-introspection-0.6.10-1
+  gtk-doc-1.14-1
   libtool-2.2.7a-15
   make-3.81-2
   pkg-config-0.23b-10
-  python-2.5.4-10
-  sed-4.1.5-2
+  python-2.6.5-1
 
 Canonical website:
   http://gstreamer.freedesktop.org/
@@ -51,28 +50,31 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer0.10-plugins-base-0.10.28-X-src.tar.bz2
+  unpack gstreamer0.10-plugins-base-0.10.29-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer0.10-plugins-base-0.10.28-X.cygport all
+  cygport ./gstreamer0.10-plugins-base-0.10.29-X.cygport all
 
 This will create:
-  /usr/src/girepository-GstInterfaces0.10-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.28-X-src.tar.bz2
-  /usr/src/gstreamer0.10-plugins-base-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-gio-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ogg-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-pango-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-theora-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-vorbis-0.10.28-X.tar.bz2
-  /usr/src/gstreamer0.10-plugins-ximage-0.10.28-X.tar.bz2
-  /usr/src/libgstinterfaces0.10-devel-0.10.28-X.tar.bz2
-  /usr/src/libgstinterfaces0.10_0-0.10.28-X.tar.bz2
+  /usr/src/girepository-GstInterfaces0.10-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.29-X-src.tar.bz2
+  /usr/src/gstreamer0.10-plugins-base-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-gio-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ogg-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-pango-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-theora-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-vorbis-0.10.29-X.tar.bz2
+  /usr/src/gstreamer0.10-plugins-ximage-0.10.29-X.tar.bz2
+  /usr/src/libgstinterfaces0.10-devel-0.10.29-X.tar.bz2
+  /usr/src/libgstinterfaces0.10_0-0.10.29-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 0.10.29-1 -----
+Version bump.
 
 ----- version 0.10.28-1 -----
 Version bump.
